WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238223
[WinCairo] RemoteGraphicsContextGL.h(78): error C2027: use of undefined type 'WebCore::GraphicsContextGL'
https://bugs.webkit.org/show_bug.cgi?id=238223
Summary
[WinCairo] RemoteGraphicsContextGL.h(78): error C2027: use of undefined type ...
Fujii Hironori
Reported
2022-03-22 13:57:10 PDT
[WinCairo] RemoteGraphicsContextGL.h(78): error C2027: use of undefined type 'WebCore::GraphicsContextGL' Since
r291610
.
https://build.webkit.org/#/builders/27/builds/28907
FAILED: Source/WebKit/CMakeFiles/WebKit.dir/GPUProcess/graphics/RemoteGraphicsContextGLWin.cpp.obj C:\MSVS\VC\Tools\MSVC\14.31.31103\bin\Hostx64\x64\cl.exe [...] -c C:\BW\wincairo-wkl-release\build\Source\WebKit\GPUProcess\graphics\RemoteGraphicsContextGLWin.cpp C:\BW\wincairo-wkl-release\build\Source\WebKit\GPUProcess\graphics\RemoteGraphicsContextGL.h(78): error C2027: use of undefined type 'WebCore::GraphicsContextGL' C:\BW\wincairo-wkl-release\build\WebKitBuild\Release\WebCore\PrivateHeaders\WebCore\GraphicsContext.h(57): note: see declaration of 'WebCore::GraphicsContextGL' C:\BW\wincairo-wkl-release\build\Source\WebKit\GPUProcess\graphics\RemoteGraphicsContextGL.h(78): error C2504: 'Client': base class undefined
Attachments
Patch for landing
(5.95 KB, patch)
2022-03-22 14:04 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2022-03-22 14:04:39 PDT
Created
attachment 455423
[details]
Patch for landing
Fujii Hironori
Comment 2
2022-03-22 14:09:42 PDT
Committed
r291699
(
248741@trunk
): <
https://commits.webkit.org/248741@trunk
>
Radar WebKit Bug Importer
Comment 3
2022-03-22 14:10:25 PDT
<
rdar://problem/90658263
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug