[WinCairo] RemoteGraphicsContextGL.h(78): error C2027: use of undefined type 'WebCore::GraphicsContextGL' https://bugs.webkit.org/show_bug.cgi?id=238223

Unreviewed build fix.
r291610 renamed GraphicsContextGLTextureMapper to GraphicsContextGLTextureMapperANGLE.

Source/WebCore:

* platform/graphics/texmap/TextureMapperGCGLPlatformLayer.cpp:
(WebCore::TextureMapperGCGLPlatformLayer::TextureMapperGCGLPlatformLayer):
* platform/graphics/texmap/TextureMapperGCGLPlatformLayer.h:

Source/WebKit:

* GPUProcess/graphics/RemoteGraphicsContextGL.h:
* GPUProcess/graphics/RemoteGraphicsContextGLWin.cpp:
(WebKit::RemoteGraphicsContextGLWin::platformWorkQueueInitialize):


Canonical link: https://commits.webkit.org/248741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291699 268f45cc-cd09-0410-ab3c-d52691b4dbfc