Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGLWin.cpp
@@ -30,7 +30,6 @@
 #if ENABLE(GPU_PROCESS) && ENABLE(WEBGL) && PLATFORM(WIN)
 #include "GPUConnectionToWebProcess.h"
 #include "WCContentBufferManager.h"
-#include <WebCore/GraphicsContextGLTextureMapper.h>
 
 namespace WebKit {
 
@@ -58,7 +57,7 @@ RemoteGraphicsContextGLWin::RemoteGraphicsContextGLWin(GPUConnectionToWebProcess
 
 void RemoteGraphicsContextGLWin::platformWorkQueueInitialize(WebCore::GraphicsContextGLAttributes&& attributes)
 {
-    m_context = WebCore::GraphicsContextGLTextureMapper::create(WTFMove(attributes));
+    m_context = WebCore::GraphicsContextGLTextureMapperANGLE::create(WTFMove(attributes));
 }
 
 void RemoteGraphicsContextGLWin::prepareForDisplay(CompletionHandler<void(std::optional<WCContentBufferIdentifier>)>&& completionHandler)
